# libkfsocketio-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: KaraFunSocketIOConfig.cmake.in
examples/: Examples.sln
examples/EchoServer/: EchoServer.vcxproj  main.cpp
examples/SocketIoClient/: SocketIoClient.vcxproj  main.cpp
include/: IKfSioClient.h  IKfSioMessage.h  IKfWebSocketConnection.h  IKfWebSocketMessage.h  IKfWebSocketServer.h  KfSioClient.h  KfSioMessage.h  KfSioSocket.h  KfWebSocketConnection.h  KfWebSocketMessage.h  KfWebSocketServer.h  libkfsocketio.h
lib/json/nlohmann/: json.hpp
libkfsocketio/: libkfsocketio.sln  libkfsocketio.vcxproj  libkfsocketio.vcxproj.filters
libkfsocketio/msvc15/: libkfsocketio.vcxproj  libkfsocketio.vcxproj.filters
libkfsocketio/src/: IKfSioClient.h  IKfWebSocketMessage.h  IKfWebSocketServer.h  KfSioClient.cpp  KfSioClient.h  KfSioListener.cpp  KfSioListener.h  KfSioMessage.cpp  KfSioMessage.h  KfSioSocket.cpp  KfWebSocketConImplWrapper.h  KfWebSocketConnection.cpp  KfWebSocketConnection.h  KfWebSocketMessage.cpp  KfWebSocketMessage.h  KfWebSocketMessageImplWrapper.h  KfWebSocketServer.cpp  KfWebSocketServer.h  KfWebSocketServerHandler.cpp  KfWebSocketServerHandler.h  libkfsocketio.cpp
